Fixed issues popup didn't show on mobile

--- a/client/Components/dish_detail/info_order.css
+++ b/client/Components/dish_detail/info_order.css
@@ -1,6 +1,3 @@
-.modal {
-    z-index: 2147483001!important;
-}
 #ordering-popup.ordering-popup-infor {
     min-height: 55% !important;
     height: auto !important;
@@ -170,8 +167,7 @@
     position: absolute;
     font-size: 20px;
     z-index: 1;
-    cursor: pointer;
-}
+    cursor: pointer;}
 
 #email-distric-display {
     display: inline;
