--- a/client/Components/loading_progress/loading_progress.css
+++ b/client/Components/loading_progress/loading_progress.css
@@ -13,7 +13,7 @@
   background-color: #0000009c;
   width: 100%;
   height: 100%;
-  z-index: 2147483002;
+  z-index: 99999;
   position: fixed;
   opacity: 0.8;
   top: 0;
